test/types/string/assignToChar/testCArray.12.good
Helpers.chpl:39: In function 'testCArrayVal':
Helpers.chpl:42: error: Cannot assign to uint(8) from string
  testCArray.chpl:28: called as testCArrayVal(strBytes: string, type toType = uint(8))
